--- a/package.json
+++ b/package.json
@@ -13,11 +13,15 @@
     "@reduxjs/toolkit": "^2.3.0",
     "axios": "^1.7.7",
     "clsx": "^2.1.1",
+    "formik": "^2.4.6",
     "modern-normalize": "^3.0.1",
     "react": "^18.3.1",
+    "react-datepicker": "^8.1.0",
     "react-dom": "^18.3.1",
     "react-redux": "^9.1.2",
-    "react-router-dom": "^6.28.0"
+    "react-router-dom": "^6.28.0",
+    "react-toastify": "^11.0.5",
+    "yup": "^1.6.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
